--- a/genindex.html
+++ b/genindex.html
@@ -422,6 +422,8 @@
         <li><a href="copyxnat.xnat_backend.server_factory.html#copyxnat.xnat_backend.server_factory.ServerFactory.create">(copyxnat.xnat_backend.server_factory.ServerFactory method)</a>
 </li>
       </ul></li>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFileContainerItem.create_file_thread">create_file_thread() (copyxnat.xnat.xnat_interface.XnatFileContainerItem static method)</a>
+</li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFile.create_from_source">create_from_source() (copyxnat.xnat.xnat_interface.XnatFile method)</a>
 
       <ul>
@@ -638,10 +640,10 @@
       </ul></li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter.get_password">get_password() (copyxnat.pyreporter.pyreporter.PyReporter method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="versioneer.html#versioneer.get_root">get_root() (in module versioneer)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.get_server">get_server() (copyxnat.xnat.xnat_interface.XnatBase method)</a>
 
       <ul>
@@ -664,8 +666,12 @@
         <li><a href="versioneer.html#versioneer.get_versions">(in module versioneer)</a>
 </li>
       </ul></li>
-      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatParentItem.get_xml">get_xml() (copyxnat.xnat.xnat_interface.XnatParentItem method)</a>
+      <li><a href="copyxnat.commands.compare_command.html#copyxnat.commands.compare_command.CompareCommand.get_xml">get_xml() (copyxnat.commands.compare_command.CompareCommand static method)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatParentItem.get_xml">(copyxnat.xnat.xnat_interface.XnatParentItem method)</a>
 </li>
+      </ul></li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatParentItem.get_xml_string">get_xml_string() (copyxnat.xnat.xnat_interface.XnatParentItem method)</a>
 
       <ul>
