--- a/_modules/copyxnat/xnat/xnat_interface.html
+++ b/_modules/copyxnat/xnat/xnat_interface.html
@@ -46,6 +46,7 @@
 <span class="kn">import</span> <span class="nn">abc</span>
 <span class="kn">import</span> <span class="nn">os</span>
 <span class="kn">import</span> <span class="nn">re</span>
+<span class="kn">import</span> <span class="nn">threading</span>
 <span class="kn">import</span> <span class="nn">time</span>
 <span class="kn">from</span> <span class="nn">enum</span> <span class="kn">import</span> <span class="n">Enum</span>
 
@@ -217,11 +218,6 @@
 <span class="sd">        :parent: The XnatItem under which the child will be created if it does</span>
 <span class="sd">            not already exist</span>
 <span class="sd">        :label: The identifier used to find or create the child item</span>
-<span class="sd">        :create_params: Additional parameters needed to create child item</span>
-<span class="sd">        :local_file: path to a local file containing the resource or XML data</span>
-<span class="sd">            that should be used to create this object on the server if</span>
-<span class="sd">            it doesn&#39;t already exist</span>
-<span class="sd">        :dry_run: if True then no change will be made on the destination server</span>
 <span class="sd">        :return: new XnatItem wrapping the item fetched or created</span>
 
 <span class="sd">        &quot;&quot;&quot;</span>
@@ -379,6 +375,12 @@
 <div class="viewcode-block" id="XnatFileContainerItem"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFileContainerItem">[docs]</a><span class="k">class</span> <span class="nc">XnatFileContainerItem</span><span class="p">(</span><span class="n">XnatItem</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;Base wrapper for resource items&quot;&quot;&quot;</span>
 
+<div class="viewcode-block" id="XnatFileContainerItem.create_file_thread"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFileContainerItem.create_file_thread">[docs]</a>    <span class="nd">@staticmethod</span>
+    <span class="k">def</span> <span class="nf">create_file_thread</span><span class="p">(</span><span class="n">item</span><span class="p">,</span> <span class="n">attributes</span><span class="p">,</span> <span class="n">local_file</span><span class="p">):</span>
+        <span class="n">item</span><span class="o">.</span><span class="n">create_on_server</span><span class="p">(</span><span class="n">create_params</span><span class="o">=</span><span class="n">attributes</span><span class="p">,</span> <span class="n">local_file</span><span class="o">=</span><span class="n">local_file</span><span class="p">)</span>
+        <span class="k">if</span> <span class="n">local_file</span><span class="p">:</span>
+            <span class="n">os</span><span class="o">.</span><span class="n">remove</span><span class="p">(</span><span class="n">local_file</span><span class="p">)</span></div>
+
 <div class="viewcode-block" id="XnatFileContainerItem.create_from_source"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFileContainerItem.create_from_source">[docs]</a>    <span class="k">def</span> <span class="nf">create_from_source</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">src_item</span><span class="p">,</span> <span class="n">xml_cleaner</span><span class="p">):</span>
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">app_settings</span><span class="o">.</span><span class="n">transfer_mode</span> <span class="o">==</span> <span class="n">TransferMode</span><span class="o">.</span><span class="n">ZIP</span><span class="p">:</span>
             <span class="n">folder_path</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">cache</span><span class="o">.</span><span class="n">make_output_path</span><span class="p">()</span>
@@ -387,10 +389,9 @@
             <span class="n">local_file</span> <span class="o">=</span> <span class="kc">None</span>
 
         <span class="n">attributes</span> <span class="o">=</span> <span class="n">src_item</span><span class="o">.</span><span class="n">interface</span><span class="o">.</span><span class="n">resource_attributes</span><span class="p">()</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">create_on_server</span><span class="p">(</span><span class="n">create_params</span><span class="o">=</span><span class="n">attributes</span><span class="p">,</span> <span class="n">local_file</span><span class="o">=</span><span class="n">local_file</span><span class="p">)</span>
-
-        <span class="k">if</span> <span class="n">local_file</span><span class="p">:</span>
-            <span class="n">os</span><span class="o">.</span><span class="n">remove</span><span class="p">(</span><span class="n">local_file</span><span class="p">)</span></div>
+        <span class="n">thread</span> <span class="o">=</span> <span class="n">threading</span><span class="o">.</span><span class="n">Thread</span><span class="p">(</span><span class="n">target</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">create_file_thread</span><span class="p">,</span>
+                                  <span class="n">args</span><span class="o">=</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">attributes</span><span class="p">,</span> <span class="n">local_file</span><span class="p">))</span>
+        <span class="n">thread</span><span class="o">.</span><span class="n">start</span><span class="p">()</span></div>
 
 <div class="viewcode-block" id="XnatFileContainerItem.export"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFileContainerItem.export">[docs]</a>    <span class="k">def</span> <span class="nf">export</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">app_settings</span><span class="p">):</span>
         <span class="n">folder_path</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">cache</span><span class="o">.</span><span class="n">make_output_path</span><span class="p">()</span>
