--- a/_modules/index.html
+++ b/_modules/index.html
@@ -65,6 +65,7 @@
 <li><a href="copyxnat/xnat/xnat_xml.html">copyxnat.xnat.xnat_xml</a></li>
 <li><a href="copyxnat/xnat_backend/pyxnat_server.html">copyxnat.xnat_backend.pyxnat_server</a></li>
 <li><a href="copyxnat/xnat_backend/server_factory.html">copyxnat.xnat_backend.server_factory</a></li>
+<li><a href="copyxnat/xnat_backend/xnatpy_server.html">copyxnat.xnat_backend.xnatpy_server</a></li>
 <li><a href="versioneer.html">versioneer</a></li>
 </ul>
 
