--- a/_modules/copyxnat/xnat_backend/server_factory.html
+++ b/_modules/copyxnat/xnat_backend/server_factory.html
@@ -43,7 +43,6 @@
 <span class="sd">&quot;&quot;&quot;Factory for creating backend objects for XNAT communication&quot;&quot;&quot;</span>
 
 <span class="kn">from</span> <span class="nn">copyxnat.xnat_backend.pyxnat_server</span> <span class="kn">import</span> <span class="n">PyXnatServer</span>
-<span class="kn">from</span> <span class="nn">copyxnat.xnat_backend.xnatpy_server</span> <span class="kn">import</span> <span class="n">XnatPyServer</span>
 
 
 <div class="viewcode-block" id="ServerFactory"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.server_factory.html#copyxnat.xnat_backend.server_factory.ServerFactory">[docs]</a><span class="k">class</span> <span class="nc">ServerFactory</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
@@ -60,10 +59,7 @@
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">_backend</span><span class="o">.</span><span class="n">lower</span><span class="p">()</span> <span class="o">==</span> <span class="s1">&#39;pyxnat&#39;</span><span class="p">:</span>
             <span class="k">return</span> <span class="n">PyXnatServer</span><span class="p">(</span><span class="n">params</span><span class="o">=</span><span class="n">params</span><span class="p">)</span>
-        <span class="k">elif</span> <span class="bp">self</span><span class="o">.</span><span class="n">_backend</span><span class="o">.</span><span class="n">lower</span><span class="p">()</span> <span class="o">==</span> <span class="s1">&#39;xnatpy&#39;</span><span class="p">:</span>
-            <span class="k">return</span> <span class="n">XnatPyServer</span><span class="p">(</span><span class="n">params</span><span class="o">=</span><span class="n">params</span><span class="p">)</span>
-        <span class="k">else</span><span class="p">:</span>
-            <span class="ne">ValueError</span><span class="p">(</span><span class="s1">&#39;Unknown backend </span><span class="si">{}</span><span class="s1">&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_backend</span><span class="p">))</span></div></div>
+        <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s1">&#39;Unknown backend </span><span class="si">{}</span><span class="s1">&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_backend</span><span class="p">))</span></div></div>
 </pre></div>
 
             <div class="clearer"></div>
