--- a/copyxnat.xnat_backend.server_factory.html
+++ b/copyxnat.xnat_backend.server_factory.html
@@ -16,7 +16,7 @@
     
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="copyxnat.xnat_backend.xnatpy_server module" href="copyxnat.xnat_backend.xnatpy_server.html" />
+    <link rel="next" title="versioneer module" href="versioneer.html" />
     <link rel="prev" title="copyxnat.xnat_backend.pyxnat_server module" href="copyxnat.xnat_backend.pyxnat_server.html" /> 
   </head><body>
     <div class="related" role="navigation" aria-label="related navigation">
@@ -29,7 +29,7 @@
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="copyxnat.xnat_backend.xnatpy_server.html" title="copyxnat.xnat_backend.xnatpy_server module"
+          <a href="versioneer.html" title="versioneer module"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="copyxnat.xnat_backend.pyxnat_server.html" title="copyxnat.xnat_backend.pyxnat_server module"
@@ -81,8 +81,8 @@
   <p class="topless"><a href="copyxnat.xnat_backend.pyxnat_server.html"
                         title="previous chapter">copyxnat.xnat_backend.pyxnat_server module</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="copyxnat.xnat_backend.xnatpy_server.html"
-                        title="next chapter">copyxnat.xnat_backend.xnatpy_server module</a></p>
+  <p class="topless"><a href="versioneer.html"
+                        title="next chapter">versioneer module</a></p>
   <div role="note" aria-label="source link">
     <h3>This Page</h3>
     <ul class="this-page-menu">
@@ -114,7 +114,7 @@
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="copyxnat.xnat_backend.xnatpy_server.html" title="copyxnat.xnat_backend.xnatpy_server module"
+          <a href="versioneer.html" title="versioneer module"
              >next</a> |</li>
         <li class="right" >
           <a href="copyxnat.xnat_backend.pyxnat_server.html" title="copyxnat.xnat_backend.pyxnat_server module"
