--- a/genindex.html
+++ b/genindex.html
@@ -538,9 +538,13 @@
 </li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.exists_on_server">exists_on_server() (copyxnat.xnat.xnat_interface.XnatItem method)</a>
 </li>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatType.EXPERIMENT">EXPERIMENT (copyxnat.xnat.xnat_interface.XnatType attribute)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatType.EXPERIMENT">EXPERIMENT (copyxnat.xnat.xnat_interface.XnatType attribute)</a>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatProject.experiment_in_cache">experiment_in_cache() (copyxnat.xnat.xnat_interface.XnatProject method)</a>
+</li>
+      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.experiment_list">experiment_list() (copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatSubject.experiments">experiments() (copyxnat.xnat_backend.pyxnat_server.PyXnatSubject method)</a>
 </li>
